fix: filter z-index

--- a/assets/styles/variables.sass
+++ b/assets/styles/variables.sass
@@ -1,7 +1,6 @@
 // Z-INDEXES
 $z-footer: 700
 $z-header: 800
-$z-filter: 600
 $z-cursor: 900
 
 $breakpoint-mobile: 768px
